stats bar on meetup

--- a/app/templates/meetups.hbs
+++ b/app/templates/meetups.hbs
@@ -15,6 +15,14 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="stats">
+    <div class="frame">
+      <div class="row">
+        <div class="large-12 columns">
+          <p class="large-text-left text-center"><a href="#">594 Embereños</a> – <a href="#">38 Talks</a> – <a href="#">11,600 Plays</a> – <a href="#">14
+            Ember Addons</a></p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
