--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,7 +14,6 @@ body {
   width: 960px;
   max-width: none;
   margin: 0 auto;
-  padding-top: 40px;
 }
 
 $landing-background-color: #e24b31;
@@ -75,71 +74,5 @@ $landing-background-color: #e24b31;
 
 }
 
-.container {
-
-  .row .columns {
-    background: #e4e4e4;
-    border: 1px solid #ccc;
-    background: #f4f4f4;
-    height: 60px;
-    line-height: 60px;
-    margin-bottom: 20px;
-  }
-}
-
-.landing-cover {
-  border-bottom: 1px solid darken($landing-background-color, 10%);
-  background-color: $landing-background-color;
-  overflow: hidden;
-
-  .row {
-    height: 399px;
-    overflow: hidden;
-
-    .london-tomster {
-      height: 425px;
-      width: 590px;
-      background-repeat: no-repeat;
-      background-position: -50px -70px;
-      @include background-image-retina('tomster', 'png', 425, 590);
-    }
-
-  }
-}
-.project-nights {
-
-  .landing-cta {
-
-    h1 a {
-      @include linkUnderlines(black, #FCFCFC);
-    }
-
-    h2 {
-      padding-top: 10px;
-      text-shadow: none;
-    }
-
-    h3 {
-      a {
-        text-shadow: 0 1px 1px darken(black, 4%);
-        border: 1px solid lighten(black, 30%);
-        background: lighten(black, 25%);
-      }
-    }
-  }
-
-  .landing-cover {
-    background-color: black;
-    border-bottom: none;
-
-    .promo-image {
-      width: 1100px;
-      height: 400px;
-      float: right;
-      background-repeat: no-repeat;
-      background-position: 250px 0px;
-      @include background-image-retina('project-nights', 'jpg', 1100, 400);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    }
-  }
-}
+@import "meetups";
+@import "project-nights";
