--- a/app/templates/project-nights.hbs
+++ b/app/templates/project-nights.hbs
@@ -1,7 +1,9 @@
 <div class="project-nights">
+  <header></header>
+
   <div class="landing-cta">
     <div class="row display">
-      <div class="small-12 large-12 small-centered small-only-text-center medium-only-text-center columns">
+      <div class="large-12 medium-12 medium-only-text-center small-12 small-only-text-center columns">
         <h1><a href="/">Project Nights</a></h1>
         <h2>Thursday, 12 January 2015 (Starts at 7.00pm)</h2>
         <h3><a href="http://www.meetup.com/London-Emberjs-User-Group/">Rsvp On Meetup</a></h3>
@@ -13,6 +15,17 @@
     <div class="promo-image show-for-large-up"></div>
   </div>
 
-  <div class="container">
+  <div class="stats">
+    <div class="frame">
+      <div class="row">
+        <div class="large-12 columns">
+          <p class="large-text-left text-center">
+            <a href="http://www.meetup.com/London-Emberjs-User-Group/" target="_blank">594 Embereños</a> –
+            <a href="https://vimeo.com/emberlondon/videos" target="_blank">41 Videos</a> –
+            <a href="http://www.emberaddons.com/?query=emberlondon" target="_blank">14 Ember Addons</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
