--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,10 @@
 @import "mixins";
 @import "foundation";
 
+$emberlondon-primary: #e24b31;
+
+$header-height: 50px;
+
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -16,7 +20,11 @@ body {
   margin: 0 auto;
 }
 
-$landing-background-color: #e24b31;
+header {
+  background-color: #333;
+  height: $header-height;
+  border-top: 1px solid #222;
+}
 
 .landing-cta {
   width: 960px;
@@ -24,7 +32,7 @@ $landing-background-color: #e24b31;
   overflow: auto;
   position: absolute;
   margin: auto;
-  top: 100px; left: 0; right: 0;
+  top: 105px + $header-height; left: 0; right: 0;
   z-index: 1;
 
   h1 {
@@ -35,7 +43,7 @@ $landing-background-color: #e24b31;
     line-height: 70px;
     margin-bottom: 0;
     padding-bottom: 0;
-    text-shadow: 0 1px 1px darken($landing-background-color, 10%);
+    text-shadow: 0 1px 1px darken($emberlondon-primary, 10%);
 
     a {
       color: #FCFCFC;
@@ -52,7 +60,7 @@ $landing-background-color: #e24b31;
     color: #FCFCFC;
     line-height: 24px;
     padding: 2px 0 25px 3px;
-    text-shadow: 0 1px 1px darken($landing-background-color, 10%);
+    text-shadow: 0 1px 1px darken($emberlondon-primary, 10%);
   }
 
   h3 {
@@ -66,12 +74,26 @@ $landing-background-color: #e24b31;
       display: inline-block;
       padding: 12px 28px;
       border-radius: 8px;
-      text-shadow: 0 1px 1px darken($landing-background-color, 4%);
-      border: 1px solid lighten($landing-background-color, 12%);
-      background: lighten($landing-background-color, 8%);
+      text-shadow: 0 1px 1px darken($emberlondon-primary, 4%);
+      border: 1px solid lighten($emberlondon-primary, 12%);
+      background: lighten($emberlondon-primary, 8%);
     }
   }
+}
 
+.landing-cover {
+  overflow: hidden;
+  .row {
+    height: 399px;
+    overflow: hidden;
+  }
+}
+
+.stats {
+  p {
+    margin: 10px 0 10px 0;
+    font-size: 14px;
+  }
 }
 
 @import "meetups";
