--- a/app/styles/meetups.scss
+++ b/app/styles/meetups.scss
@@ -10,6 +10,7 @@
     overflow: hidden;
 
     .london-tomster {
+      pointer-events: none;
       position: absolute;
       margin: auto;
       top: 0;
